---
source: reflectapi-demo/src/tests/basic.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.basic.StructWithDeprecatedField"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.basic.StructWithDeprecatedField"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.basic.StructWithDeprecatedField": {
        "type": "object",
        "title": "reflectapi_demo.tests.basic.StructWithDeprecatedField",
        "required": [
          "_f",
          "_g",
          "_h"
        ],
        "properties": {
          "_f": {
            "deprecated": true,
            "$ref": "#/components/schemas/u8"
          },
          "_g": {
            "deprecated": true,
            "$ref": "#/components/schemas/u8"
          },
          "_h": {
            "deprecated": true,
            "$ref": "#/components/schemas/u8"
          }
        }
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
